--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
      <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
      <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
     <title>React Frame</title>
+    <base href="/">
   </head>
   <body class="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
